# RAS

./: .gitignore  README.md  database.json
backend-src/: docker-compose.yml  init.sh
backend-src/PictuRAS/: .gitignore  Dockerfile  README.md  app.js  package-lock.json  package.json
backend-src/PictuRAS/controllers/: execution.js  project.js  send_to_queue.js
backend-src/PictuRAS/models/: project.js  user.js
backend-src/Users/: app.js
backend-src/api-gateway/: .gitignore  client_test.js  package-lock.json  server.js
backend-src/data/: database.json
backend-src/databases/: database.json
backend-src/ws-gateway/: client.js  client_old.js  client_test.js  index.html  package-lock.json  package.json  server.js  server_sckio.js  test.js
backend_src/: docker-compose.yml
backend_src/PictuRAS/: README.md  app.js
backend_src/Users/: Dockerfile  package.json
backend_src/api-gateway/: Dockerfile  package.json
backend_src/databases/: database.json
cloud_src/: docker-compose.yaml  queues_test.py  test_request_noS3.py  test_requests.py  test_requests_S3.py  test_requests_all.py  watermark_test.py
cloud_src/images/: .gitignore
cloud_src/minio/: setup_minio.py
cloud_src/rabbitmq/: Dockerfile  docker-compose.yaml  queues_test.py  rabbit_config.py  setup_queues.py
cloud_src/tools/: README.md
docs/: docker_install.md
final_src/: docker-compose.yml  nginx.conf
final_src/api-gateway/: server.js
final_src/pictuRAS-front/: package-lock.json  package.json
final_src/ws-gateway/: package.json  server.js
frontend_src/pictuRAS-front/: docker-compose.yaml  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
src/: docker-compose.yml
src/PictuRAS/: README.md  app.js  package.json
src/backend_src/: .gitignore
src/cloud_src/: docker-compose.yaml  test_requests_S3.py
src/frontend_src/: docker-compose.yaml
src/messages/: ToolProcessingRequest.py  ToolProcessingResult.py
src/tools/: ResizeTool.py
src/tools/brightness/: Dockerfile  brightness_tool.py  main.py  pyproject.toml  test.py
src/tools/brightness/picturas_brightness_tool_ms/: brightness_request_message.py  brightness_result_message.py  brightness_tool.py
src/tools/count_objects/: pyproject.toml
src/tools/count_objects/count_objects_tool_ms/: config.py  count_objects_result_message.py  count_objects_tool.py  main.py  simple.py
src/tools/count_objects/count_objects_tool_ms/core/messages/: request_message.py
src/tools/remove_background/: pyproject.toml
src/tools/remove_background/remove_background_tool_ms/: config.py  remove_background_tool.py
src/tools/resize/: Dockerfile  pyproject.toml
src/tools/resize/picturas_resize_tool_ms/: config.py  resize_result_message.py  resize_tool.py
src/tools/rotate/: Dockerfile  pyproject.toml
src/tools/rotate/picturas_rotate_tool_ms/: config.py  main.py  rotate_request_message.py  rotate_result_message.py  rotate_tool.py
src/tools_src/: BaseTool.py
src/tools_src/binarization/: pyproject.toml
test_images/: .gitignore
tools_src/binarization/: Dockerfile
tools_src/count_objects/: .gitignore  Dockerfile
tools_src/count_people/: Dockerfile
tools_src/crop/: Dockerfile  pyproject.toml
tools_src/messages/: ToolProcessingRequest.py
tools_src/remove_background/: Dockerfile
(+109 files in other folders)
