[tool.poetry]
name = "picturas-brightness-tool-ms"
version = "0.1.0"
description = "PictuRAS microservice (tool) that applies brightness filter"
authors = ["Augusto Campos <agstcmps.111@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
pika = "^1.3.2"
pydantic = "^2.10.3"
pillow = "^11.0.0"
boto3 = "^1.35.98"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
