[tool.poetry]
name = "picturas_resize_tool_ms"
version = "0.1.0"
description = "PictuRAS microservice (tool) that resizes an image"
authors = ["Guilherme Krull <pg55090@uminho.pt>"]

[tool.poetry.dependencies]
python = "^3.13"
pika = "^1.3.2"
pydantic = "^2.10.3"
pillow = "^11.0.0"
boto3 = "^1.35.98"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
